# discordinator

./: .gitattributes  .gitignore  .ralph_status_foundation.json  .ralph_status_infra.json  .ralph_status_ui.json  CLAUDE.md  CODEMAPS.md  Cargo.toml  PROPTEST_PROPERTIES.md  README.md  REQUIREMENTS.md  deny.toml  flake.nix  orchestrate.sh  ralph.sh  ralph_log_foundation.md  ralph_log_infra.md  ralph_log_ui.md
src/: app.rs  auth.rs  config.rs  event_handler.rs  lib.rs  logging.rs  main.rs
src/domain/: cache.rs  event.rs  markdown.rs  mod.rs  pane.rs  types.rs
src/infrastructure/: anti_detection.rs  db.rs  discord_properties.rs  gateway.rs  http_client.rs  keyring.rs  mod.rs  science.rs
src/input/: handler.rs  mod.rs  mode.rs
src/markdown/: integration.rs  mod.rs  parser.rs  renderer.rs
src/ui/: layout.rs  login.rs  mod.rs  pane_renderer.rs  theme.rs
src/ui/widgets/: input_box.rs  message_view.rs  mod.rs  server_tree.rs  status_bar.rs
