[package]
name = "discordinator"
version = "0.1.0"
edition = "2021"
description = "Discord TUI client with tmux-like split pane support"
publish = false

[dependencies]
# TUI framework
ratatui = "0.30.0"
crossterm = { version = "0.28", features = ["event-stream"] }

# Discord data types only (NOT gateway/http - those are bot-only)
twilight-model = "0.16"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Custom gateway (WebSocket + compression)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
flate2 = "1"

# Custom HTTP client with TLS fingerprint impersonation (Chrome)
rquest = { version = "5.1", features = ["json", "cookies"] }
rquest-util = "2.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Secure token storage
keyring = { version = "3.6", features = ["apple-native", "sync-secret-service"] }
secrecy = "0.10"

# Error handling
color-eyre = "0.6"
eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Configuration
toml = "0.8"
dirs = "6"

# Encoding
base64 = "0.22"

# QR code
qrcode = "0.14"

# RSA for QR auth protocol
rsa = "0.9"
sha2 = "0.10"

# Random (for jitter)
rand = "0.8"

# Time
chrono = "0.4"
iana-time-zone = "0.1"

# Futures
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
proptest = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
or_fun_call = "warn"
implicit_clone = "warn"
needless_pass_by_ref_mut = "warn"
use_self = "warn"

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.bench]
inherits = "release"
debug = true
